# drift_detector

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: linear.yml  optuna.yml  random_forest.yml  ridge.yml  train.yml  xgboost.yml  xgboost_best.yml  xgboost_no_reg.xml  xgboost_target_transform.yml
configs/models/: linear.yml  linear_regression.yml  random_forest.yml  ridge.yml  xgboost.yml
data/: test.csv.dvc  train.csv.dvc
data/drift_concept/: data.csv.dvc
data/drift_multi/: data.csv.dvc
data/drift_slow/: data.csv.dvc
data/raw/: data.csv.dvc
notebooks/: compare_splits.py  plot_data.py  test_drift.py
scripts/: batch_predict.py
src/drift_detector/: __init__.py  cli.py  workflow.py
src/drift_detector/api/: server.py  store.py
src/drift_detector/data/: generate.py  ingest.py  load.py  split.py
src/drift_detector/metrics/: __init__.py  metrics.py
src/drift_detector/models/: evaluate.py  models.py  pipeline.py  train.py
src/drift_detector/optimisation/: optuna.py  search_spaces.py
src/drift_detector/tracking/: mlflow.py
src/drift_detector/utils/: config.py  logging.py
tests/: test_config.py  test_data.py  test_metrics.py  test_models.py  test_pipeline.py  test_search_spaces.py  test_store.py
