[build-system]
requires = ["setuptools>=64"]
build-backend = 'setuptools.build_meta'

[project]
name = "drift-detector"
version = "0.1.0"
description = "Test repo for MLOps cycle; data versioning, experiment tracking, deployment, monitoring"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "evidently>=0.4.36",
    "fastapi>=0.139.0",
    "ipython>=9.15.0",
    "joblib>=1.5.0",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "numpy>=2.5.1",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "plotly>=6.0.0",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]

[project.scripts]
drift_detector = "drift_detector.cli:main"
generate_data = "drift_detector.data.generate:main"
split_data = "drift_detector.data.split:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.15.19",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q -vv"
